# mandelbrot_set

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  config.toml
.github/workflows/: ci.yml
cmake/: DependenciesConfig.cmake  External.cmake  ProjectConfig.cmake  RaylibConfig.cmake  Warnings.cmake
shaders/: mandelbrot_set.frag
src/: CMakeLists.txt  app.cpp  app.hpp  config.cpp  config.hpp  drawing_scope.hpp  enum_list.hpp  main.cpp  mandelbrot_error.hpp  rgb.hpp
tests/: CMakeLists.txt  test_app.cpp  test_config.cpp  test_main.cpp
tests/configs/: config_invalid_layout1.toml  config_invalid_layout2.toml  config_invalid_layout3.toml  config_invalid_layout4.toml  config_invalid_shaders1.toml  config_invalid_shaders2.toml  config_invalid_shaders3.toml  config_invalid_window1.toml  config_invalid_window10.toml  config_invalid_window11.toml  config_invalid_window12.toml  config_invalid_window13.toml  config_invalid_window2.toml  config_invalid_window3.toml  config_invalid_window4.toml  config_invalid_window5.toml  config_invalid_window6.toml  config_invalid_window7.toml  config_invalid_window8.toml  config_invalid_window9.toml  config_no_shader.toml  config_no_window.toml  config_valid1.toml  config_valid2.toml
